Before LED Effect installation

--- a/printer_data/config/KlipperScreen.conf
+++ b/printer_data/config/KlipperScreen.conf
@@ -1,9 +1,11 @@
-
+[printer Micron]
+titlebar_items: chamber_temperature
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
 #~# confirm_estop = True
 #~# use_dpms = False
+#~# print_sort_dir = date_asc
 #~# print_view = list
 #~# 
 #~# [displayed_macros Printer]
@@ -19,4 +21,8 @@
 #~# temperature_sensor compute_module = False
 #~# temperature_fan compute_module = False
 #~# temperature_sensor cartographer_mcu = False
+#~# 
+#~# [graph Micron]
+#~# temperature_sensor cartographer_mcu = False
+#~# temperature_fan compute_module = False
 #~#
