--- a/printer_data/config/moonraker.conf
+++ b/printer_data/config/moonraker.conf
@@ -36,6 +36,14 @@ trusted_clients:
 subscriptions:
     mainsail
 
+# Spoolman
+[spoolman]
+server: http://spoolman.home.sarkar.net:7912/
+#   URL to the Spoolman instance. This parameter must be provided.
+sync_rate: 5
+#   The interval, in seconds, between sync requests with the
+#   Spoolman server.  The default is 5.
+
 # this enables moonraker's update manager
 [update_manager]
 refresh_interval: 168
