--- a/printer_data/config/printer_cfg/toolhead/extruder.cfg
+++ b/printer_data/config/printer_cfg/toolhead/extruder.cfg
@@ -5,7 +5,7 @@ step_pin: toolhead:E_STEP
 dir_pin: toolhead:E_DIR
 enable_pin: !toolhead:E_ENABLE
 microsteps: 64
-rotation_distance: 44.7336
+rotation_distance: 46.2053 #44.7336
 gear_ratio: 9:1
 nozzle_diameter: 0.4
 filament_diameter: 1.75
