--- a/printer_data/config/printer_macros/filament_load.cfg
+++ b/printer_data/config/printer_macros/filament_load.cfg
@@ -18,7 +18,7 @@ gcode:
   #RESPOND PREFIX="UNLOAD FILAMENT:" MSG="Unloading {svv.loaded_filament_type}@{loc_temp}°C"
   EXTENDED_RESPOND PREFIX="FILAMENT:" MSG="Start unloading filament" PREFIX_COLOR="accent"
   _UNLOAD_FILAMENT TEMP={loc_temp}
-  #CLEAR_ACTIVE_SPOOL
+  CLEAR_ACTIVE_SPOOL
   #LED_STAT_RESTORE
 
 ###############################################################################
