--- a/printer_data/config/printer_macros/position.cfg
+++ b/printer_data/config/printer_macros/position.cfg
@@ -1,9 +1,59 @@
-[gcode_macro POSITION_XYZ_CENTER]
-gcode:
-    {% set th = printer.toolhead %}
-    G0 F7200 X{th.axis_maximum.x//2} Y{th.axis_maximum.y//2} Z{th.axis_maximum.z//2}
 
-[gcode_macro POSITION_XY_FRONT]
+#[gcode_macro POSITION_XYZ_CENTER]
+#gcode:
+#    {% set th = printer.toolhead %}
+#    G0 F7200 X{th.axis_maximum.x//2} Y{th.axis_maximum.y//2} Z{th.axis_maximum.z//2}
+
+#[gcode_macro POSITION_XY_FRONT]
+#gcode:
+#    {% set th = printer.toolhead %}
+#    G0 F7200 X{th.axis_maximum.x//2} Y5
+
+[gcode_macro POSITION_X_LEFT]
 gcode:
     {% set th = printer.toolhead %}
-    G0 F7200 X{th.axis_maximum.x//2} Y5
+    POSITION_TOOLHEAD POS_X=0 POS_Y={th.axis_maximum.y} POS_Z=5
+
+[gcode_macro POSITION_BACK_LEFT_LOW]
+gcode:
+    {% set th = printer.toolhead %}
+    POSITION_TOOLHEAD POS_X=0 POS_Y={th.axis_maximum.y} POS_Z=5
+
+[gcode_macro POSITION_BACK_RIGTH_LOW]
+gcode:
+    {% set th = printer.toolhead %}
+    POSITION_TOOLHEAD POS_X={th.axis_maximum.x} POS_Y={th.axis_maximum.y} POS_Z=5
+
+[gcode_macro POSITION_BACK_CENTER_LOW]
+gcode:
+    {% set th = printer.toolhead %}
+    POSITION_TOOLHEAD POS_X={th.axis_maximum.x//2} POS_Y={th.axis_maximum.y} POS_Z=5
+
+#[gcode_macro POSITION_CENTER_LEFT_LOW]
+#[gcode_macro POSITION_CENTER_RIGTH_LOW]
+#[gcode_macro POSITION_CENTER_CENTER_LOW]
+
+#[gcode_macro POSITION_FRONT_LEFT_LOW]
+#[gcode_macro POSITION_FRONT_RIGTH_LOW]
+#[gcode_macro POSITION_FRONT_CENTER_LOW]
+
+
+
+
+[gcode_macro POSITION_TOOLHEAD]
+gcode:
+ {% set printer_status = printer.print_stats.state %}
+ {% set pos_x = params.POS_X|default(0)|float %}
+ {% set pos_y = params.POS_Y|default(0)|float %}
+ {% set pos_z = params.POS_Z|default(10)|float %}
+
+ {% if status != "printing" and status != "paused" %}
+  {% if printer.quad_gantry_level.applied == False %}
+   {% if "xyz" not in printer.toolhead.homed_axes %}
+     G28
+   {% endif %}
+   QUAD_GANTRY_LEVEL
+   G28 Z
+  {% endif %}
+  G0 F7200 X{pos_x} Y{pos_y} Z{pos_z}
+ {% endif %}
