--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -12,6 +12,7 @@
 [include printer_cfg/frame/bed_mesh.cfg] # Done
 [include printer_cfg/frame/chamber_filter.cfg]
 [include printer_cfg/frame/chamber_temp.cfg]
+[include printer_cfg/frame/fan_ebay.cfg]
 [include printer_cfg/frame/light.cfg]
 
 [include printer_cfg/toolhead/extruder.cfg]
@@ -19,11 +20,16 @@
 
 [include printer_cfg/shake_tune.cfg]
 
+
 [include printer_macros/respond.cfg]
+[include printer_macros/qgl_override.cfg]
 [include printer_macros/filament_load.cfg]
 [include printer_macros/calibrate_pa.cfg]
 [include printer_macros/nozzle_scrub.cfg]
 [include printer_macros/git_backup.cfg]
+[include printer_macros/prompts.cfg]
+[include printer_macros/position.cfg]
+[include printer_macros/spoolman.cfg]
 
 [virtual_sdcard]
 path: ~/printer_data/gcodes
@@ -54,13 +60,13 @@ gcode:
   {% set x_wait = printer.toolhead.axis_maximum.x|float / 2 %}
   {% set y_wait = printer.toolhead.axis_maximum.y|float / 2 %}
     
-    SET_GCODE_OFFSET Z=0                                 # Set offset to 0
+  SET_GCODE_OFFSET Z=0 MOVE=1                           # Set z offset to 0
     
-    # Home the printer, set absolute positioning and update the Stealthburner LEDs.
-    #STATUS_HOMING                                         # Set LEDs to homing-mode
-    G28                                                   # Full home (XYZ)
-    G90                                                   # Absolute position
-    BED_MESH_CLEAR                                       # Clear old saved bed mesh (if any)
+  # Home the printer, set absolute positioning and update the Stealthburner LEDs.
+  #STATUS_HOMING                                         # Set LEDs to homing-mode
+  G28                                                   # Full home (XYZ)
+  G90                                                   # Absolute position
+  BED_MESH_CLEAR                                        # Clear old saved bed mesh (if any)
 
     # Check if the bed temp is higher than 90c - if so then trigger a heatsoak.
   {% if params.BED|int > 90 %}
@@ -70,11 +76,13 @@ gcode:
 
     ##  Uncomment if you have a Nevermore.
     #SET_PIN PIN=nevermore VALUE=1                      # Turn on the nevermore
+    SET_FAN_SPEED FAN=chamber_filter SPEED=1.0
 
     G1 X{x_wait} Y{y_wait} Z25 F9000                    # Go to center of the bed
     M190 S{target_bed}                                  # Set the target temp for the bed
     SET_DISPLAY_TEXT MSG="Heatsoak: {target_chamber}c"  # Display info on display
-    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={target_chamber}   # Waits for chamber temp
+    
+    TEMPERATURE_WAIT SENSOR="temperature_sensor chamber_temperature" MINIMUM={target_chamber}   # Waits for chamber temp
 
   # If the bed temp is not over 90c, then skip the heatsoak and just heat up to set temp with a 5 min soak
   {% else %}
@@ -101,9 +109,10 @@ gcode:
   #STATUS_MESHING                                       # Set LEDs to bed mesh-mode
   BED_MESH_CALIBRATE ADAPTIVE=1                         # Start the bed mesh (add ADAPTIVE=1) for adaptive bed mesh
 
-  CLEAN_NOZZLE E_TEMP=230 E_LENGTH=5 C_TEMP=190  #PETG
-  
-  CARTOGRAPHER_TOUCH                                    # Calibrate z offset only with hot nozzle
+  CLEAN_NOZZLE E_TEMP=230 E_LENGTH=6 C_TEMP=190  #PETG
+  #CLEAN_NOZZLE E_TEMP=260 E_LENGTH=6 C_TEMP=210  #ABS
+
+  CARTOGRAPHER_TOUCH RETRIES=20                                   # Calibrate z offset only with hot nozzle
 
   # Heat up the hotend up to target via data from slicer
   SET_DISPLAY_TEXT MSG="Hotend: {target_extruder}c"     # Display info on display
@@ -115,10 +124,10 @@ gcode:
   # Get ready to print by doing a primeline and updating the LEDs
   SET_DISPLAY_TEXT MSG="Printer goes brr"               # Display info on display
   #STATUS_PRINTING                                       # Set LEDs to printing-mode
-  G0 X2 Y2 F10000                           # Go to starting point
+  G0 X0 Y0 F10000                           # Go to starting point
   G0 Z0.4                                               # Raise Z to 0.4
   G91                                                   # Incremental positioning 
-  G1 X100 E20 F1000                                     # Primeline
+  G1 X100 E18 F1000                                     # Primeline
   G90                                                   # Absolute position
 
  
@@ -146,8 +155,13 @@ gcode:
     M107                                     ; turn off fan
     
     BED_MESH_CLEAR
+    SET_FAN_SPEED FAN=chamber_filter SPEED=0
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
+
+# PETG on CR3D structured: 0.06
+# ABS on CR3D structured: 0.09
+# ABS on CR3D smooth: 0.85
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
