--- a/printer_data/config/printer_macros/nozzle_scrub.cfg
+++ b/printer_data/config/printer_macros/nozzle_scrub.cfg
@@ -9,8 +9,8 @@ variable_raise_distance: 10
 
 gcode:
 
- {% set clean_temp     = params.C_TEMP|default(150)|float %}   # starting PA value
- {% set extrude_temp     = params.E_TEMP|default(150)|float %}   # starting PA value
+ {% set clean_temp     = params.C_TEMP|default(200)|float %}   # starting PA value
+ {% set extrude_temp     = params.E_TEMP|default(240)|float %}   # starting PA value
  {% set purge_length   = params.E_LENGTH|default(0)|float %}  # how much to increment PA per band
  {% set status = printer.print_stats.state %}
 
@@ -32,11 +32,13 @@ gcode:
 
  ## Heat up and extrude if extrude length > 0
   {% if purge_length > 0 %}
+    ## Move nozzle to xy start position
+    G91                                                   # Incremental positioning 
+    G1 Z25.0 F1000
     #M109 S{extrude_temp}
     M104 S{extrude_temp}
     TEMPERATURE_WAIT SENSOR=extruder MINIMUM={extrude_temp} MAXIMUM={extrude_temp+5}
-    G91                                                   # Incremental positioning 
-    G1 E{purge_length} F100 
+    G1 E{purge_length} F200 
     G90                                                   # Absolute position
   {% endif %}
  #M109 S{clean_temp}
@@ -44,7 +46,7 @@ gcode:
  TEMPERATURE_WAIT SENSOR=extruder MINIMUM={clean_temp-5} MAXIMUM={clean_temp}
 
  ## Move nozzle to z start position
- G1 Z{start_z} F1000
+ G1 X{start_x-5} Z{start_z} F1000
 
  ## Wipe nozzle
  {% for wipes in range(1, (wipe_qty + 1)) %}
